Added draft for about-me
Added a test game written in javascripted
Added more tests

--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -10,6 +10,7 @@ body
 {
     font-family: alphabetized_cassette_tapesRg;
     font-size: 50px;
+    /*background-color: grey;*/
 }
 
 body :link, :visited, :active 
