--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -6,22 +6,30 @@
     font-style: normal;
 }
 
-body
+@font-face 
 {
-    font-family: alphabetized_cassette_tapesRg;
-    font-size: 50px;
-    /*background-color: grey;*/
+    font-family: 'fantasque_sans_monoregular';
+    src: url('fonts/fantasquesansmono-regular-webfont.woff2') format('woff2'), url('fonts/fantasquesansmono-regular-webfont.woff') format('woff');*/
+    font-weight: normal;
+    font-style: normal;
 }
 
-body :link, :visited, :active 
+body 
+{
+    font-family: fantasque_sans_monoregular;
+}
+
+/*The horizontal menu bar*/
+body :link, :visited
 {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 h1, h2
 {
     /*margin-left: 25px;*/
+    font-family: alphabetized_cassette_tapesRg;
     font-style: normal;
     padding-left: 175px;
 }
@@ -40,20 +48,26 @@ h2
 
 .paragraph
 {
-    margin:50px;
+    /*margin:50px;*/
     padding-left: 25px;
 }
 
 .heading
 {
-    background: linear-gradient(#00ff90, #00ffff);
-    font-size: 60px;
+    background: linear-gradient(#00ff90, lightseagreen);
+    font-size: 35px;
     text-align: center;
-    margin: 30px;
+    margin-top: 30px;
 }
 
 ul#horizontal-list li
 {
     margin: 10px;
     display: inline;
+}
+
+/*When any items of the horizontal list is clicked on, the font colour changes*/
+ul#horizontal-list li :active 
+{
+    color: lightseagreen;
 }
