--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -9,7 +9,7 @@
 @font-face 
 {
     font-family: 'fantasque_sans_monoregular';
-    src: url('fonts/fantasquesansmono-regular-webfont.woff2') format('woff2'), url('fonts/fantasquesansmono-regular-webfont.woff') format('woff');*/
+    src: url('fonts/fantasquesansmono-regular-webfont.woff2') format('woff2'), url('fonts/fantasquesansmono-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
@@ -31,6 +31,7 @@ h1, h2
     /*margin-left: 25px;*/
     font-family: alphabetized_cassette_tapesRg;
     font-style: normal;
+    color: lightseagreen;
     padding-left: 175px;
 }
 
@@ -46,28 +47,91 @@ h2
     margin-left: 25px;
 }
 
-.paragraph
+.paragraph 
 {
-    /*margin:50px;*/
-    padding-left: 25px;
+    font-size: 25px;
+    padding-top: 30px;
+    padding-left: 150px;
+    padding-right: 150px;
+}
+.paragraph p
+{
+    padding-bottom: 10px;
+    text-align: justify;
 }
 
+
+/*Menu bar*/
 .heading
 {
     background: linear-gradient(#00ff90, lightseagreen);
-    font-size: 35px;
+    font-size: 25px;
     text-align: center;
     margin-top: 30px;
 }
-
 ul#horizontal-list li
 {
     margin: 10px;
+    padding-right: 20px;
     display: inline;
 }
-
 /*When any items of the horizontal list is clicked on, the font colour changes*/
 ul#horizontal-list li :active 
 {
     color: lightseagreen;
 }
+
+
+table
+{
+    margin:10px;
+    border: solid lightseagreen;
+}
+table td
+{
+    padding: 10px;
+    align-content: center;
+}
+table li
+{
+    padding: 10px;
+    list-style-position: inherit;
+    list-style-type: circle;
+}
+
+/*INDEX*/
+/*Current roles and responsabilities*/
+table#roles
+{
+    padding: 10px;
+}
+table#roles td :hover
+{
+    font-weight: bold;
+    transition: ease-in;
+}
+.roles
+{
+    float: left;
+}
+
+/*Industry skills*/
+table#skills
+{
+    padding: 10px;
+}
+table#skills h3
+{
+    text-align: center;
+    font-size: 20px;
+    color: lightseagreen;
+    display: block;
+}
+.skills
+{
+    float: right;
+}
+
+/*ABOUT ME*/
+
+
