--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -135,3 +135,10 @@ table#skills h3
 /*ABOUT ME*/
 
 
+/*PORTFOLIO*/
+h2#projects-title
+{
+    margin-left: 0px;
+    font-size: 30px;
+    font-family: fantasque_sans_monoregular;
+}
