--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -197,7 +197,7 @@ h2#projects-title
 }
 
 /*Desktop screen dimensions*/
-@media only screen and (min-width: 768px)
+@media (min-width: 768px)
 {
     .heading
     {
