--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -74,6 +74,7 @@ h2
     font-size: 40px;
 }
 
+
 .paragraph 
 {
     font-size: 25px;
@@ -103,6 +104,24 @@ ul#redirectables li
 .redirectables img
 {
     width:75px;
+}
+
+.fade
+{
+    animation-name: fade;
+    animation-duration: 2s;
+}
+
+@keyframes fade
+{
+    from
+    {
+        opacity: 0.1;
+    }
+    to
+    {
+        opacity: 1;
+    }
 }
 
 table
