--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -110,13 +110,27 @@ ul#redirectables li
 {
     animation-name: fade;
     animation-duration: 2s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 2s;
 }
 
 @keyframes fade
 {
     from
     {
-        opacity: 0.1;
+        opacity: 0;
+    }
+    to
+    {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fade
+{
+    from
+    {
+        opacity: 0;
     }
     to
     {
@@ -216,7 +230,7 @@ h2#projects-title
 }
 
 /*Desktop screen dimensions*/
-@media (min-width: 768px)
+@media (min-width: 1281px)
 {
     .heading
     {
