--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -105,40 +105,9 @@ h2
     text-align: justify;
 }
 
-.redirectables
-{
-    margin: 30px;
-    margin-bottom: 100px;
-    margin-top: 100px;
-    text-align: center;
-}
-/*Redirectables bar*/
-ul#redirectables li
-{
-    margin: auto;
-    /*padding-top: 50px;*/
-    padding: 50px;
-    display: inline;
-}
 
-.redirectables img
-{
-    width: 150px;
-}
 
-.r_desk
-{
-    display: none;
-}
 
-/*Skill display fade animation*/
-.fade
-{
-    animation-name: fade;
-    animation-duration: 2s;
-    -webkit-animation-name: fade;
-    -webkit-animation-duration: 2s;
-}
 @keyframes fade
 {
     from
@@ -171,64 +140,105 @@ table td
     padding: 10px;
     align-content: center;
 }
-/*table li
-{
-    padding: 10px;
-    list-style-position: inherit;
-    list-style-type: circle;
-}*/
 
-/*INDEX*/
-/*Current roles and responsabilities*/
-table#roles
+/*LANGUAGE SWITCH BUTTON*/
+.language-switch 
 {
-    padding: 10px;
-}
-table#roles td :hover
-{
-    font-weight: bold;
-    transition: ease-in;
-}
-.roles
-{
-    float: left;
-    position: center;
+    margin-left: 13px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    position: sticky;
+    top: 0;
+    text-align: center;
 }
 
-.rolecollapsible 
-{
-    border: none;
-    cursor: pointer;
-    background-color: white;
-    outline: none;
-}
-
-.roledescription 
+.checkbox
 {
     display: none;
-    overflow: hidden;
 }
 
-/*Industry skills*/
-table#skills
+.label
 {
-    padding: 10px;
+    display: block;
+    display: block;
+    overflow: hidden;
+    cursor: pointer;
+    border: 3px solid white;
+    width: 6em;
+    height: 6em;
+    border-radius: 50%;
 }
-table#skills h3
+
+.switch-first-label
 {
-    text-align: center;
-    font-size: 20px;
-    color: lightseagreen;
+    display: block;
+    width: 100%;
+    margin-left: -100%;
+    transition: margin 0.3s ease-in 0s;
+}
+
+.switch-first-label:before, .switch-first-label:after
+{
     display: block;
 }
-.skills
+
+.switch-first-label:before
 {
-    float: right;
-    position: center;
+    content: "FR";
 }
 
+.switch-first-label:after
+{
+    content: "EN";
+}
 
-/*PORTFOLIO*/
+.checkbox:checked + .label .switch-first-label
+{
+    margin-left: 0;
+}
+
+.checkbox:checked + .label .switch-second-label
+{
+    right: 0;
+}
+
+/*INDEX PAGE*/
+/*Redirectables bar*/
+.redirectables
+{
+    margin: 30px;
+    margin-bottom: 100px;
+    margin-top: 100px;
+    text-align: center;
+}
+ul#redirectables li
+{
+    margin: auto;
+    /*padding-top: 50px;*/
+    padding: 50px;
+    display: inline;
+}
+
+.redirectables img
+{
+    width: 150px;
+}
+
+.r_desk
+{
+    display: none;
+}
+
+/*Skill display fade animation*/
+.fade
+{
+    animation-name: fade;
+    animation-duration: 2s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 2s;
+}
+
+/*PORTFOLIO PAGE*/
 h2#projects-title
 {
     margin-left: 0px;
@@ -236,7 +246,7 @@ h2#projects-title
     font-family: fantasque_sans_monoregular;
 }
 
-/*CONTACT*/
+/*CONTACT PAGE*/
 .contact-container
 {
     margin-left: 600px;
@@ -253,7 +263,9 @@ h2#projects-title
     border-radius: 10px;
 }
 
-/*Desktop screen dimensions*/
+
+/**************************DESKTOP DIMENSIONS****************************/
+
 @media (min-width: 1281px)
 {
     .heading
