Add form tags to each input Add submit button in container

--- a/css/body_stylesheet.css
+++ b/css/body_stylesheet.css
@@ -299,7 +299,14 @@ h2#projects-title
 
 .contact-container table td
 {
-    padding: 50px;
+    padding: 25px;
+}
+
+.message-input textarea
+{
+    width: 400px;
+    height: 50px;
+    resize: none;
 }
 
 /**************************DESKTOP DIMENSIONS****************************/
